[package]
name = "rocket_circle"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
diesel = { version = "1.4.4", features = ["mysql", "chrono", "r2d2"] }
dotenv = "0.15.0"
chrono = { version = "0.4.19", features = ["serde"] }
#r2d2 = "0.8.9"
serde = "1.0.126"
serde_json = "1.0.64"
serde_derive = "1.0.126"
#env_logger = "0.9.0"
#log = "0.4.14"
bcrypt = "0.10"
thiserror = "1.0.26"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
features = ["diesel_mysql_pool"]
